Logtalk/examples/errors/unmatchdir.lgt

:- objecto(unmatchdir).


:- end_object.
